@@ -1,6 +1,7 @@
 %Document negative widths in -thinlines
 %Document CCITT and CCITTG4 in -process-images
 %Document -decompress-just-content
+%Document -contains-javascript and -remove-javascript
 %\DocumentMetadata{lang=en, pdfversion=2.0, pdfstandard=ua-2, pdfstandard=a-4f, testphase={phase-III, title, table, math, firstaid}}
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
